Adds css stylesheet with first pass at nav and sub-nav styling

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div class="links">
       <ul>
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
+        <li><a href="#">header link 1</a></li>
+        <li><a href="#">header link 2</a></li>
+        <li><a href="#">header link 3</a></li>
       </ul>
     </div>
   </nav>
@@ -33,11 +33,11 @@
           This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
           contrast
         </div>
-        <button type="button" class="button-signup"></button>
+        <button type="button" class="button-signup">Sign up</button>
       </div>
-      <div class="sub-nav-img">
-
-      </div>
+    </div>
+    <div class="sub-nav-img">
+      this is a placeholder for an image
     </div>
   </div>
 
@@ -100,7 +100,7 @@
         Sign up for our product by clicking that button right over there!
       </div>
     </div>
-    <button type="button" class="button-signup"></button>
+    <button type="button" class="button-signup">Sign up</button>
   </div>
   <footer>
     Copyright © The Odin Project 2021
